--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,40 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     tools:context=".ListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#8BC34A"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tablayout"
-            app:layout_constraintVertical_bias="0.0">
-
-            <!--            <android.support.v7.widget.RecyclerView-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent" />-->
 
 
-        </android.support.v4.view.ViewPager>
 
 
         <!--        <android.support.v7.widget.RecyclerView-->
@@ -50,6 +22,256 @@
         <!--            app:layout_constraintStart_toStartOf="parent"-->
         <!--            app:layout_constraintTop_toBottomOf="@+id/tablayout"/>-->
 
-    </android.support.constraint.ConstraintLayout>
+        <!--    <android.support.v7.widget.Toolbar-->
+        <!--        android:id="@+id/toolbar"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:background="#CB9C27B0"-->
+        <!--        android:minHeight="?attr/actionBarSize"-->
+        <!--        android:theme="?attr/actionBarTheme"-->
+        <!--        android:fitsSystemWindows="true"-->
+        <!--        app:layout_constraintBottom_toTopOf="@+id/fragment_container"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+
+        <!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+
+
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/benefit_coordinator_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="673dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginTop="350dp"
+                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+
+
+                <!--            <android.support.v7.widget.RecyclerView-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="match_parent" />-->
+
+
+            </android.support.v4.view.ViewPager>
+
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:fitsSystemWindows="true"
+                android:gravity="top">
+
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:contentScrim="#ffffff"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+
+                    <!--                    <ImageView-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="250dp"-->
+                    <!--                        android:background="#CB9C27B0"-->
+                    <!--                        android:fitsSystemWindows="true"-->
+                    <!--                        android:scaleType="centerCrop"-->
+                    <!--                        app:layout_collapseMode="parallax" />-->
+
+
+                    <LinearLayout
+                        android:id="@+id/vUserProfileRoot"
+                        android:layout_width="match_parent"
+                        android:layout_height="230dp"
+                        android:background="#ffffff"
+                        android:clipChildren="false"
+                        android:clipToPadding="false"
+                        android:orientation="vertical"
+                        android:paddingLeft="24dp"
+                        android:paddingTop="64dp"
+                        android:paddingRight="24dp"
+                        android:paddingBottom="24dp"
+                        app:layout_collapseMode="parallax">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clipChildren="false">
+
+                            <com.github.siyamed.shapeimageview.CircularImageView
+                                android:id="@+id/ivUserProfilePhoto"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:layout_marginRight="16dp"
+                                android:src="@mipmap/zhuzhu"
+                                app:siBorderColor="?attr/colorPrimary"
+
+                                app:siBorderWidth="2dp" />
+
+                            <LinearLayout
+                                android:id="@+id/vUserDetails"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Bob"
+                                    android:textColor="#000000"
+                                    android:textSize="24sp" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="\@jsmith"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Mobile development passionate."
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+
+                                <!--                                <Button-->
+                                <!--                                    android:id="@+id/btnFollow"-->
+                                <!--                                    android:layout_width="match_parent"-->
+                                <!--                                    android:layout_height="24dp"-->
+                                <!--                                    android:layout_marginTop="8dp"-->
+                                <!--                                    android:layout_marginRight="24dp"-->
+                                <!--                                    android:text="following"-->
+                                <!--                                    android:textColor="#ffffff"-->
+                                <!--                                    android:textSize="12sp" />-->
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/vUserStats"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="1167"
+                                    android:textColor="#000000"
+                                    android:textSize="20sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="posts"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="396"
+                                    android:textColor="#000000"
+                                    android:textSize="20sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="followers"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="485"
+                                    android:textColor="#000000"
+                                    android:textSize="20sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="following"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+
+
+<!--                                        <android.support.v7.widget.Toolbar-->
+<!--                                            android:id="@+id/toolbar"-->
+<!--                                            android:layout_width="match_parent"-->
+<!--                                            android:layout_height="?attr/actionBarSize"-->
+<!--                                            android:background="#ffffff"-->
+<!--                                            android:fitsSystemWindows="true"-->
+<!--                                            android:minHeight="?attr/actionBarSize"-->
+<!--                                            app:layout_collapseMode="pin">-->
+<!--                                        </android.support.v7.widget.Toolbar>-->
+
+                    <include layout="@layout/toolbar"
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        app:layout_collapseMode="pin"/>
+
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/tablayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_gravity="bottom"
+                        android:layout_marginTop="230dp"
+                        android:background="#f4436d"
+                        android:fitsSystemWindows="true"
+                        app:layout_collapseMode="pin" />
+
+                </android.support.design.widget.CollapsingToolbarLayout>
+
+
+            </android.support.design.widget.AppBarLayout>
+
+
+        </android.support.design.widget.CoordinatorLayout>
+
+
+
 
 </FrameLayout>
