--- a/app/src/main/res/layout/fragment_list1.xml
+++ b/app/src/main/res/layout/fragment_list1.xml
@@ -9,6 +9,11 @@
 <!--    android:layout_height="match_parent"-->
 <!--    android:id="@+id/swipe_refresh"/>-->
 
+    <com.yalantis.phoenix.PullToRefreshView
+        android:id="@+id/pull_to_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
@@ -19,6 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tablayout" />
 
+    </com.yalantis.phoenix.PullToRefreshView>
 
 
 </FrameLayout>
