--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,39 +2,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/touxiang"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="#CDDC39" />
+
+        <!--        <FrameLayout-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content">-->
+
+
+        <!--            <View-->
+        <!--                android:layout_width="70dp"-->
+        <!--                android:layout_height="70dp"-->
+        <!--                android:background="@drawable/yuanjiao" />-->
+
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/zhuzhu"
+            app:siBorderColor="#ffffff"
+            app:siBorderWidth="2dp" />
+        <!--            <ImageView-->
+        <!--                android:id="@+id/touxiang"-->
+        <!--                android:layout_width="70dp"-->
+        <!--                android:layout_height="70dp"-->
+        <!--                android:src="@mipmap/zhuzhu" />-->
+
+
+        <!--        </FrameLayout>-->
 
         <TextView
             android:id="@+id/yonghuming"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:background="#2196F3"
-            android:text="名称"
+            android:gravity="center|left"
+            android:paddingStart="20dp"
+            android:text="Bob"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="117dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/neirong"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#673AB7" />
+            android:layout_height="340dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/food" />
     </LinearLayout>
 
     <LinearLayout
@@ -45,31 +71,43 @@
         <TextView
             android:id="@+id/wenzineirong"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="#E91E63"
-            android:text="New Text" />
+            android:text="打卡"
+            android:paddingLeft="20dp"
+            android:textSize="14sp"
+            android:textColor="#000000"/>
     </LinearLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/common_line_color"
+        />
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="标签" />
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="150dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/button"
+            android:layout_height="40dp"
+            android:text="#标签" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:text="点赞" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="130dp"
+            android:background="@drawable/aixin_pressed_changed"
+            />
     </LinearLayout>
 
     <TextView
